# subgoal_predictor

./: .gitignore  CLAUDE.md  readme.md
software/: .gitignore  CLAUDE.md  launch_after_bpA.fish  pyproject.toml  requirements.txt  test.py
software/_tests/: debug_smooth_planner.py  mppi_grid_search.py
software/core/communication/: device_server.py
software/core/utils/: aiohttp_websocket_server.py  data.py  exit.py  filepicker.py  test.py  time.py  websockets.py  yaml_utils.py
software/extensions/aruco_detector/: .gitignore  aruco_server.py
software/extensions/cli/: cli.py
software/extensions/content_server/: HOSTING.md  README.md  experiments.json  ingest.py  server.py  settings.json
software/extensions/gui/: babylon-popup.html  camera-popup.html  chart-popup.html  index.html  map-popup.html  network-popup.html  vite.config.js
software/extensions/joystick/: joystick_manager.py  joystick_mappings.py  websocket_joystick_manager.py
software/extensions/network_monitor/: README.md  config.yaml  network_monitor_app.py  requirements.txt  run.sh
software/extensions/optitrack/: ARCHITECTURE.md  __init__.py  optitrack.py
software/extensions/teleplot/: teleplot.py  teleplot_example.py
software/extensions/testbed_creator/: index.html  package.json  vite.config.js
software/master_thesis/: README.md
software/master_thesis/general/: general_agent.py  general_environment.py  general_obstacle.py  general_simulation.py  general_task.py
software/master_thesis/gui/: cli_commands.py  (+4 more)
software/utilities/: compile_all_firmware.py  install.py  update_software.py
(+1307 files in other folders)
