[project]
name = "software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp~=3.11.13",
    "cobs~=1.2.1",
    "control~=0.10.1",
    "cvxpy>=1.7.3",
    "dacite~=1.9.2",
    "edge-tts~=7.0.0",
    "elevate~=0.1.3",
    "flask~=3.1.1",
    "flask-cors~=6.0.1",
    "flask-socketio~=5.5.1",
    "graphviz~=0.20.3",
    "gtts~=2.5.4",
    "intelhex~=2.3.0",
    "ipywidgets~=8.1.7",
    "matplotlib~=3.10.0",
    "natnetclient~=0.8.3",
    "networkx~=3.4.2",
    "numpy~=2.0.2",
    "ompl>=2.0.0",
    "opencv-python>=4.13.0.92",
    "orjson~=3.10.11",
    "pandas~=2.2.3",
    "paramiko~=3.5.0",
    "pettingzoo~=1.24.3",
    "pillow~=11.1.0",
    "prompt-toolkit~=3.0.48",
    "psutil~=7.0.0",
    "pydub~=0.25.1",
    "pygame~=2.6.1",
    "pynput~=1.8.1",
    "python-fcl>=0.7",
    "pyttsx3~=2.98",
    "qmt~=0.2.4",
    "requests~=2.32.3",
    "rich~=14.0.0",
    "scipy~=1.15.2",
    "seaborn~=0.13.2",
    "simpy~=4.1.1",
    "stable-baselines3>=2.7.0",
    "streamdeck~=0.9.6",
    "tensorboard>=2.20.0",
    "textual~=3.0.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "websocket-client~=1.8.0",
    "websocket-server~=0.6.4",
    "wheel==0.45.1",
    "zeroconf~=0.146.3",
]
